# django_movie_recommendation

./: .dockerignore  .env  .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
django_movie_recommendation/: manage.py
django_movie_recommendation/common/: exceptions.py  permissions.py  serializers.py
django_movie_recommendation/django_movie_recommendation/: asgi.py  settings.py  urls.py  wsgi.py
django_movie_recommendation/docker/: Dockerfile  docker-compose.yaml  entrypoint.sh
django_movie_recommendation/movie/: models.py  selectors.py  serializers.py  services.py  urls.py  views.py
django_movie_recommendation/movie/migrations/: 0001_initial.py  0002_initial.py
django_movie_recommendation/movie/serializers/: serializers.py  serializers_base.py
django_movie_recommendation/recommendation/: models.py  selectors.py  services.py  urls.py  views.py
django_movie_recommendation/recommendation/migrations/: 0001_initial.py  0002_initial.py
django_movie_recommendation/recommendation/serializers/: serializers.py  serializers_base.py
django_movie_recommendation/tests/: base.py  factories.py  test_plan.md
django_movie_recommendation/tests/test_movie/: test_movie_selectors.py
django_movie_recommendation/tests/test_user/: test_authentication.py
django_movie_recommendation/user/: models.py  serializers.py  services.py  urls.py  views.py
django_movie_recommendation/user/migrations/: 0001_initial.py  0002_usercustom_created_at_usercustom_updated_at_and_more.py
django_movie_recommendation/user/serializers/: serializers.py
